--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" />
+
+        <activity
+            android:name=".ForgotPasswordActivity"
+            android:theme="@style/AppTheme"
+            android:parentActivityName=".MainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
