--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
 
         <activity
-            android:name=".ForgotPasswordActivity"
-            android:theme="@style/AppTheme"
-            android:parentActivityName=".MainActivity">
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +19,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ForgotPasswordActivity"
+            android:parentActivityName=".LoginActivity" />
+
+        <activity
+            android:name=".LoginActivity"
+            android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
