--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-
             android:name=".StartupActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SplashActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,7 +34,6 @@
             android:name="sport.tsse.com.sportapp.onboarding.login.LoginActivity"
             android:parentActivityName=".StartupActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".onboarding.SingleFragmentOnboardingActivity" />
     </application>
 
 </manifest>
