--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,11 +29,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    compile('com.mikepenz:materialdrawer:5.8.2@aar') {
+        transitive = true
+    }
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'org.jetbrains.kotlin:kotlin-stdlib:1.0.6'
     compile 'com.android.support:design:25.2.0'
-
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:cardview-v7:25.2.0'
+    testCompile 'junit:junit:4.12'
 }
