--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,14 +30,14 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile('com.mikepenz:materialdrawer:5.8.2@aar') {
-        transitive = true
-    }
-    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile "com.squareup.retrofit2:converter-moshi:2.2.0"
+
+    compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'org.jetbrains.kotlin:kotlin-stdlib:1.1.1'
-    compile 'com.android.support:design:25.2.0'
+    compile 'com.android.support:design:25.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:cardview-v7:25.2.0'
+    compile 'com.android.support:cardview-v7:25.3.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     testCompile 'junit:junit:4.12'
 }
