--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,11 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".onboarding.startUp.StartupActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".SplashActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,27 +33,33 @@
         <activity
             android:name=".onboarding.forgotPassword.ForgotPasswordActivity"
             android:parentActivityName=".onboarding.login.LoginActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".onboarding.login.LoginActivity"
             android:parentActivityName=".onboarding.startUp.StartupActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".SingleFragmentNavigationActivity"
             android:label="@string/home"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".exercise.detail.ExerciseDetailActivity"
             android:label="Detail"
             android:parentActivityName=".SingleFragmentNavigationActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".schedule.add.ScheduleCreationActivity"
             android:label="Add Schedule"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".workout.WorkoutCreationActivtity"
             android:label="Add Workout"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
