--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="sport.tsse.com.sportapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -41,14 +43,14 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".SingleFragmentNavigationActivity"
+            android:name=".base.SingleFragmentNavigationActivity"
             android:label="@string/home"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".exercise.detail.ExerciseDetailActivity"
             android:label="Detail"
-            android:parentActivityName=".SingleFragmentNavigationActivity"
+            android:parentActivityName=".base.SingleFragmentNavigationActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
@@ -57,8 +59,13 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".workout.WorkoutCreationActivtity"
-            android:label="Add Workout"
+            android:name=".workout.detail.WorkoutDetailActivity"
+            android:label="Detail Workout"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".workout.add.AddWorkoutActivity"
+            android:label="Detail Workout"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
